# example-service-cloud-run

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  app_configuration.json  deployment_configuration.json  main.py  octue-cloud-run.yaml  octue.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  twine.json
.github/workflows/: cd.yaml  python-ci.yml  release.yml  update-pull-request.yml
example_service_cloud_run/: app.py
scripts/: entrypoint  fetch_gcloud_secrets.py  run_analysis.py
tests/: test_app.py
